# Scanner

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
scanner/: CMakeLists.txt  scanner.cpp  scanner.hpp
test/: CMakeLists.txt  scanner_test.cpp
test_cases/: output1.txt  output2.txt  output3.txt  output4.txt  output5.txt
